cmake_minimum_required(VERSION 3.5.0)
project(sandbox VERSION 0.1.0 LANGUAGES C CXX)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

find_package(glfw3 REQUIRED)
find_package(OpenGL REQUIRED)
include_directories(${OpenGL_INCLUDE_DIR})
include_directories(${GLFW_INCLUDE_DIR})
add_library(glad "C:/msys64/mingw64/lib/glad/include/glad/glad.h" "C:/msys64/mingw64/lib/glad/src/glad.c")
add_executable(sandbox main.cpp)
add_library(Shader STATIC Shader.hpp Shader.cpp)
add_library(Screen STATIC Screen.hpp Screen.cpp)
add_library(VBO STATIC VBO.hpp VBO.cpp)
add_library(VAO STATIC VAO.hpp VAO.cpp)
add_library(EBO STATIC EBO.hpp EBO.cpp)
add_library(GameField STATIC GameField.hpp GameField.cpp)
target_link_libraries(Screen glad glfw ${OPENGL_glu_LIBRARY} ${OPENGL_gl_LIBRARY} Shader VBO VAO EBO)
target_link_libraries(Shader glad glfw ${OPENGL_glu_LIBRARY} ${OPENGL_gl_LIBRARY})
target_link_libraries(VBO glad glfw ${OPENGL_glu_LIBRARY} ${OPENGL_gl_LIBRARY})
target_link_libraries(VAO glad glfw ${OPENGL_glu_LIBRARY} ${OPENGL_gl_LIBRARY} VBO)
target_link_libraries(EBO glad glfw ${OPENGL_glu_LIBRARY} ${OPENGL_gl_LIBRARY})
target_link_libraries(sandbox Screen Shader)
target_link_libraries(sandbox GameField)

